--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,19 @@
 ---
 ja:
   activerecord:
+    models:
+      user: ユーザー
+      entry: 記事
+    attributes:
+      user:
+        name: 名前
+        email: メールアドレス
+        user_name: ユーザーネーム
+        password: パスワード
+        remember_me: ログインを記憶
+      entry:
+        image: 画像
+        content: 本文
     errors:
       messages:
         record_invalid: 'バリデーションに失敗しました: %{errors}'
